<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="@dimen/margin_module_2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_msg_enter_otp"
        android:textColor="@color/blue_text"
        android:textSize="@dimen/headline_regular_muli_regular"/>

    <TextView
        android:id="@+id/text_otp_dialog_phoneEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_module_4"
        android:layout_marginTop="@dimen/margin_module_4"
        android:text="@string/str_change_numb"
        android:textAllCaps="false"
        android:textSize="@dimen/label_muli_bold"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_otpview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/pinview_otp_verify"
            layout="@layout/pin_view_layout"/>

    </android.support.design.widget.TextInputLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_module_4">

        <include
            android:id="@+id/resendOtpView"
            layout="@layout/layout_otp_button"/>


        <!--<Button-->
        <!--fontPath="fonts/muli-bold.ttf"-->
        <!--android:id="@+id/btn_otp_dialog_resendOtp"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_gravity="left"-->
        <!--android:background="@color/transparent"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/str_resend_otp"-->
        <!--android:textAllCaps="false"-->
        <!--android:textColor="@color/cyan_main"-->
        <!--android:textSize="@dimen/caption_2_muli_bold"-->
        <!--android:textStyle="bold"-->
        <!--tools:ignore="MissingPrefix"/>-->

        <Button
            android:id="@+id/btn_otp_dialog_submit"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_module_6"
            android:layout_gravity="right"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:paddingLeft="@dimen/margin_module_4"
            android:paddingRight="@dimen/margin_module_4"
            android:text="@string/str_submit"
            android:textAllCaps="false"
            android:textColor="@color/cyan_light"
            android:textSize="@dimen/label_muli_bold"/>

    </FrameLayout>
</LinearLayout>