<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    tools:context="com.ollycredit.ui.recovery.password.RecoverPasswordCompleteActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:background="@color/blue_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="image/Animation"
            android:textAllCaps="true"
            android:textColor="@color/red_msg"
            android:textSize="@dimen/body_2_caps_muli_bold" />

    </FrameLayout>

    <LinearLayout
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_weight="0.7"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_module_4"
            android:layout_marginTop="@dimen/margin_module_4"
            android:gravity="left"
            android:paddingLeft="@dimen/margin_module_2"
            android:text="@string/str_password_reset"
            android:textColor="@color/blue_text"
            android:textSize="@dimen/headline_regular_muli_regular" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_module_5"
            android:layout_marginLeft="@dimen/margin_module_2"
            android:layout_marginRight="@dimen/margin_module_2"
            android:text="@string/str_msg_password_reset"
            android:textColor="@color/blue_text"
            android:textSize="@dimen/body_1_muli_bold" />

        <Button
            android:id="@+id/btn_reset_pass_back_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_module_2"
            android:layout_marginRight="@dimen/margin_module_2"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:text="@string/str_back_login"
            android:textAllCaps="false"
            android:textColor="@color/cyan_light"
            android:textSize="@dimen/label_muli_bold" />

    </LinearLayout>

</LinearLayout>
