<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/cardview_default_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_module_5.5"
            android:layout_marginLeft="@dimen/margin_module_2.5"
            android:layout_marginRight="@dimen/margin_module_2"
            android:layout_marginTop="@dimen/margin_module_4"
            android:gravity="left"
            android:text="@string/str_new_phone_no"
            android:textColor="@color/blue_text"
            android:textSize="@dimen/headline_regular_muli_regular"/>


        <LinearLayout
            android:layout_marginBottom="@dimen/margin_module_4"
            android:id="@+id/linear_landing_phoneNumb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/iv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_module_2"
                android:layout_marginRight="@dimen/margin_module_2"
                android:contentDescription="@string/str_img_landing_phone"
                android:paddingBottom="@dimen/margin_module_2.5"
                android:paddingTop="@dimen/margin_module_3"
                android:scaleType="fitCenter"
                android:tint="@color/cyan_main"
                app:srcCompat="@drawable/ic_phone"/>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.85">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilPhoneTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_your_phone_no">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:clickable="false"
                        android:focusable="false"
                        android:inputType="number"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:paddingBottom="@dimen/margin_module_2.5"
                        android:paddingTop="@dimen/margin_module_1.5"
                        android:text="+91"
                        android:textColor="@color/gray_main"
                        android:textColorHint="@color/cyan_main"
                        android:textSize="@dimen/label_muli_bold"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_dialog_newNumb"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/margin_module_5"
                        android:inputType="number"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:paddingBottom="@dimen/margin_module_1.5"
                        android:paddingTop="@dimen/margin_module_1.5"
                        android:textColor="@color/gray_main"
                        android:textColorHint="@color/cyan_main"
                        android:textSize="@dimen/label_muli_bold"/>

                </android.support.design.widget.TextInputLayout>


            </FrameLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:alpha="0.5"
            android:background="@color/gray_main"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal"
            android:padding="@dimen/margin_module_0.5">

            <Button
                fontPath="fonts/muli-bold.ttf"
                android:id="@+id/dialog_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:paddingLeft="@dimen/margin_module_1"
                android:paddingRight="@dimen/margin_module_1"
                android:text="@string/cancel"
                android:textStyle="bold"
                android:textSize="@dimen/caption_2_muli_bold"
                android:textColor="@color/cyan_main"
                tools:ignore="MissingPrefix"/>

            <Button
                fontPath="fonts/muli-bold.ttf"
                android:id="@+id/dialog_ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:paddingLeft="@dimen/margin_module_1"
                android:paddingRight="@dimen/margin_module_1"
                android:text="@string/ok"
                android:textStyle="bold"
                android:textSize="@dimen/caption_2_muli_bold"
                android:textColor="@color/cyan_main"
                tools:ignore="MissingPrefix"/>

        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>

